# RetroSynth

./: CMakeLists.txt  ReadMe.md  RetroSynth.jucer
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Frontend/: ADSRPage.cpp  ADSRPage.h  FIlterControl.h  FilterControl.cpp  FilterPage.cpp  FilterPage.h  MainPage.cpp  MainPage.h  OSCPage.cpp  OSCPage.h  OSCcontrol.cpp  OSCcontrol.h  VoiceControl.cpp  VoiceControl.h
Source/Synthesizer/: BiquadFilter.h  DelayUnit.h  Phasor.cpp  Phasor.h  SynthSound.h  SynthSource.cpp  SynthSource.h  SynthVoice.cpp  SynthVoice.h  WaveTable.cpp  WaveTable.h  WaveVoiceNesTri.h  WaveVoiceNoise.h  WaveVoicePulse.h  WaveVoiceSaw.h  WaveVoiceSine.h  WaveVoiceTri.h
